# aikortex-stark-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
src/: agent.py  credits.py  llm.py  main.py  persona.py  supabase_client.py
src/tools/: __init__.py
